<resources>
    <string name="app_name">tuttobello_front</string>
    <string name="login_username">Nombre de usuario o email</string>
    <string name="login_password">Contraseña</string>
    <string name="login_btn_send">Iniciar Sesión</string>
    <string name="autn_example">autenticado</string>
    <string name="content_description_media">book\n</string>
    <string name="action_1">Update\n</string>
    <string name="action_2">Delete\n</string>
    <string name="price">S/ 65.00</string>
    <string name="texto1">home\n</string>
</resources>